Networking rewrite + remove minecart